# livox_detection

./: .gitignore  README.md  livox_rosdetection.py  readme.md  setup.py  test.py
config/: config.py  show.rviz
data/: test_data.csv
livoxdetection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
livoxdetection/models/: boolmap.py  centerhead.py  ld_base_v1.py  model_nms_utils.py  resfpn.py
livoxdetection/ops/: LICENSE
livoxdetection/ops/iou3d_nms/.ipynb_checkpoints/: iou3d_nms_utils-checkpoint.py
networks/: model.py
results/: result_1.txt
tools/: center.csv  launch.sh  rviz.rviz  test_ros.py  vis_ros.py
utils/lib_cpp/: CMakeLists.txt  lib_cpp.cpp
